--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
 *.R linguist-language=R
 *.r linguist-language=R
-*.Rmd linguist-language=R
+*.Rproj linguist-language=R
+*.qmd linguist-language=R
+*.pdf linguist-language=R
+
+docs/* linguist-vendored
+*.md linguist-documentation
+*.csv linguist-documentation
